fix gaps

--- a/app/scss/catalog-page/_catalog.scss
+++ b/app/scss/catalog-page/_catalog.scss
@@ -1,6 +1,6 @@
 .catalog {
     background-color: $white;
-    padding: 50px 0 72px;
+    padding: 42px 0 45px;
 
 
     @include r($md) {
@@ -9,7 +9,8 @@
     &__title {
         font-size: 42px;
         font-weight: 700;
-        margin-bottom: 48px;
+        margin-bottom: 40px;
+        letter-spacing: 0.2rem;
 
         @include r($md) {
             margin-bottom: 30px;
@@ -159,7 +160,7 @@
 
     &__item  {
         &:not(:last-child) {
-            margin-bottom: 10px;
+            margin-bottom: 12px;
         }
     }
 
